# online_notes

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
src/online_notes/application/: __init__.py
src/online_notes/application/commands/: __init__.py
src/online_notes/application/commands/note/: __init__.py  create_note_command.py  update_note_command.py
src/online_notes/application/commands/user/: __init__.py  change_user_login_command.py  change_user_password_command.py  create_user_command.py  update_user_command.py
src/online_notes/application/exceptions/: __init__.py  db_excepion.py
src/online_notes/application/exceptions/models/: __init__.py
src/online_notes/application/exceptions/value_objects/: __init__.py
src/online_notes/application/gateways/: __init__.py  note_gateway.py  user_gateway.py
src/online_notes/application/interactors/: __init__.py
src/online_notes/application/interactors/note/: __init__.py  create_note_interactor.py  update_note_interactor.py
src/online_notes/application/interactors/user/: __init__.py  change_user_login_interactor.py  change_user_password_interactor.py  create_user_interactor.py  (+1 more)
src/online_notes/application/models/: __init__.py  note.py  user.py
src/online_notes/application/value_objects/: __init__.py  email.py  tag.py  user_login.py  user_password.py
src/online_notes/infrastructure/db/: metadata.py
tests/test_models/: test_note.py  test_user.py
tests/test_value_objects/: test_email.py  test_tag.py  test_user_login.py  test_user_password.py
(+20 files in other folders)
